---------------------------------------------------------------------------------------------------
Version: 1.8.3
Date: XX December 2023
  Compatibility:
    - [BZ] When BZ-tin is enable, recipes with lead will not be reverted to iron
    - [K2] Added setting to enable/disable lead ingredients in early ammos
    - [PF] Added compatibility with Brim Stuff, Lasing Around, and Them Thar Hills by Planetfall
    - [RSC] Fixed rocket silo stage 1 not advancing in its own progress
---------------------------------------------------------------------------------------------------
Version: 1.8.2
Date: 9 November 2023
  Bugfixes:
    - Actually fixed crash on load with MSI2
---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 8 November 2023
  Features:
    - Added map rechart on migration to reveal rocket silo holes in already-mapped chunks
  Bugfixes:
    - Fixed crash when updating to 1.8.0 with MSI2
    - Fixed crash on load with VeryBZ or BZ Basic Metals
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 3 November 2023
  Features:
    - Rocket silos can now only be placed in naturally occuring rocket silo holes
    - Rockets now require "Rocket frames" to construct, crafted from titansteel, low density structures, and lubricant
    - Added water condensing recipe for getting rid of excess steam
    - Added tips and tricks pages explaining vehicle fuel restrictions and new rocket silo mechanics
    - Added logistics requests to combat aircraft
  Changes:
    - Reduced stack size of titansteel plates from 25 to 15
    - Reduced stack size of Uranium-235 and Uranium-238 from 50 to 25
    - Reduced stack size of battery packs from 200 to 100
    - Reduced stack size of all science packs from 100 to 50
    - Decreased cargo ships inventory from 100 to 80
    - Decreased tanker ship capacity from 250,000 to 200,000