@@ -1,9 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.8.3
-Date: XX December 2023
+Date: 8 December 2023
   Compatibility:
     - [BZ] When BZ-tin is enable, recipes with lead will not be reverted to iron
     - [K2] Added setting to enable/disable lead ingredients in early ammos
+    - [K2] Reduced stack sizes of tech cards/research data
     - [PF] Added compatibility with Brim Stuff, Lasing Around, and Them Thar Hills by Planetfall
     - [RSC] Fixed rocket silo stage 1 not advancing in its own progress
 ---------------------------------------------------------------------------------------------------
